--- a/public/index.html
+++ b/public/index.html
@@ -19,22 +19,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>My first App</title>
+    <!--Bootstrap4-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <!-- Toda la apicación se monta en este archivo html,es decir que va a ser el único que se envíe en cada petición desde el servidor
+    y la parte correspondiente a js (con toda la lógica de react) estará conectada mediante este id root que está en este div esta es la forma en la 
+    que react implementa toda la lógica al html evitando así la recarga del servidor esta lógica está
+    dentro de la carpeta SRC en el archivo index.js -->
   </body>
 </html>
